add two language to components in admin panel

--- a/PsychoApp_AdminPanel/src/app/app.component.html
+++ b/PsychoApp_AdminPanel/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="flex justify-between items-center p-4 bg-blue-500 text-white">
+    <div class="flex justify-between items-center p-4 dark:bg-blue-950 text-white">
       <h1 class="text-lg font-bold">
         {{ 'ADMIN_PANEL' | translate }}
       </h1>
@@ -18,12 +18,7 @@
         </button>
       </div>
     </div>
-  
-    <div class="p-4">
-      <p class="text-xl">
-        {{ 'WELCOME' | translate }}
-      </p>
-    </div>
+
   </div>
   
   
