--- a/PsychoApp_AdminPanel/src/app/features/users/add-new-user/add-new-user.component.html
+++ b/PsychoApp_AdminPanel/src/app/features/users/add-new-user/add-new-user.component.html
@@ -1,5 +1,5 @@
 <div class="max-w-lg mx-auto mt-10 p-6 dark:bg-gray-900 shadow-lg rounded-lg">
-    <h2 class="text-xl font-bold mb-4 dark:text-white">{{'EDIT_USER'|translate}} {{ userId }} </h2>
+    <h2 class="text-xl font-bold mb-4 dark:text-white">{{'EDIT_USER'|translate}}</h2>
     <form [formGroup]="editForm" (ngSubmit)="onSubmit()" >
       <div class="mb-4">
         <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" for="firstName">{{'FIRST_NAME'|translate}}</label>
@@ -56,7 +56,7 @@
         type="submit"
         class="w-full bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600"
       >
-       {{'UPDATE_USER'|translate}}
+       {{'SUBMIT'|translate}}
       </button>
     </form>
   </div>
