change some ui things in admin panel

--- a/PsychoApp_AdminPanel/src/app/app.component.html
+++ b/PsychoApp_AdminPanel/src/app/app.component.html
@@ -1,5 +1,6 @@
+<div class="dark:bg-slate-900">
 <div>
-    <div class="flex justify-between items-center p-4 dark:bg-blue-950 text-white">
+    <div class="flex justify-between items-center p-4 dark:bg-gray-900 text-white shadow-2xl">
       <h1 class="text-lg font-bold">
         {{ 'ADMIN_PANEL' | translate }}
       </h1>
@@ -23,3 +24,4 @@
   
 
 <router-outlet />
+</div>
