--- a/PsychoApp_AdminPanel/src/app/features/users/users.component.html
+++ b/PsychoApp_AdminPanel/src/app/features/users/users.component.html
@@ -1,47 +1,19 @@
-<div class="relative overflow-x-auto shadow-md sm:rounded-lg m-10 dark:bg-gray-900">
+<div class="relative overflow-x-auto  sm:rounded-lg m-10 dark:bg-gray-900 shadow-2xl shadow-blue-800">
   <h1 class="text-2xl font-bold text-gray-200 text-center mt-4">{{'USER_LIST'|translate}}</h1>
   <div
     class="flex items-center justify-between flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white dark:bg-gray-900">
     
     <div class="flex items-center">
-    <!-- action button -->
-    <div>
-      <button id="dropdownActionButton" data-dropdown-toggle="dropdownAction"
-        class="inline-flex items-center m-4 text-gray-500 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-3 py-1.5 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
-        type="button">
-        <span class="sr-only">Action button</span>
-        {{'ACTION'|translate}}
-        <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-          viewBox="0 0 10 6">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="m1 1 4 4 4-4" />
-        </svg>
-      </button>
+    
+<!-- delete user -->
+<div class="ms-3">
+  <button type="button" (click)="deleteUser()"
+    class="text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-3 py-1 text-center inline-flex items-center me-2 dark:bg-red-500 dark:hover:bg-red-600 dark:focus:ring-red-800">
+    <img class="me-2 w-7 h-7" src="https://img.icons8.com/ios-glyphs/30/ffffff/delete-forever.png" alt="delete-user" />
+    {{ 'DELETE_USER' | translate }}
+  </button>
+</div>
 
-      <!-- Dropdown menu -->
-      <div id="dropdownAction"
-        class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
-        <ul class="py-1 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownActionButton">
-          <li>
-            <a href="#"
-              class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Reward</a>
-          </li>
-          <li>
-            <a href="#"
-              class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Promote</a>
-          </li>
-          <li>
-            <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Activate
-              account</a>
-          </li>
-        </ul>
-        <div class="py-1">
-          <a href="#"
-            class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Delete
-            User</a>
-        </div>
-      </div>
-    </div>
 
     <!-- add new user -->
     <div >
@@ -104,6 +76,7 @@
         <td class="px-6 py-4">{{ user.id }}</td>
         <th scope="row" class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white">
           <div
+          [routerLink]="['/edit-user', user.id]"
             class="w-10 h-10 rounded-full bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white hover:from-pink-500 hover:to-orange-500 flex items-center justify-center"
             title="{{ user.username }}">
             {{ user.username[0] }}
