--- a/PsychoApp_AdminPanel/src/app/features/edit-user/edit-user.component.html
+++ b/PsychoApp_AdminPanel/src/app/features/edit-user/edit-user.component.html
@@ -1,4 +1,4 @@
-<div class="max-w-lg mx-auto mt-10 p-6 dark:bg-gray-900 shadow-lg rounded-lg">
+<div class="max-w-lg mx-auto mt-10 p-6 dark:bg-gray-900 shadow-2xl shadow-blue-800 rounded-lg">
     <h2 class="text-xl font-bold mb-4 dark:text-white">{{'EDIT_USER'|translate}} {{ userId }} </h2>
     <form [formGroup]="editForm" (ngSubmit)="onSubmit()" >
       <div class="mb-4">
