--- a/PsychoApp_AdminPanel/src/app/features/users/users.component.html
+++ b/PsychoApp_AdminPanel/src/app/features/users/users.component.html
@@ -2,28 +2,18 @@
   <h1 class="text-2xl font-bold text-gray-200 text-center mt-4">{{'USER_LIST'|translate}}</h1>
   <div
     class="flex items-center justify-between flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white dark:bg-gray-900">
-    
+
     <div class="flex items-center">
-    
-<!-- delete user -->
-<div class="ms-3">
-  <button type="button" (click)="deleteUser()"
-    class="text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-3 py-1 text-center inline-flex items-center me-2 dark:bg-red-500 dark:hover:bg-red-600 dark:focus:ring-red-800">
-    <img class="me-2 w-7 h-7" src="https://img.icons8.com/ios-glyphs/30/ffffff/delete-forever.png" alt="delete-user" />
-    {{ 'DELETE_USER' | translate }}
-  </button>
-</div>
 
-
-    <!-- add new user -->
-    <div >
-      <button type="button" (click)="addNewUser()"
-        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-3 py-1 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-        <img class="me-2 w-7 h-7" src="https://img.icons8.com/ios-glyphs/30/ffffff/add.png" alt="add-user-male--v1" />
-        {{ 'ADD_NEW_USER' |translate}}
-      </button>
+      <!-- add new user -->
+      <div class="ms-3">
+        <button type="button" (click)="addNewUser()"
+          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-3 py-1 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+          <img class="me-2 w-7 h-7" src="https://img.icons8.com/ios-glyphs/30/ffffff/add.png" alt="add-user-male--v1" />
+          {{ 'ADD_NEW_USER' |translate}}
+        </button>
+      </div>
     </div>
-  </div>
 
     <!-- search -->
     <label for="table-search" class="sr-only">Search</label>
@@ -58,7 +48,7 @@
         <th scope="col" class="px-6 py-3">{{'EMAIL'|translate}}</th>
         <th scope="col" class="px-6 py-3">{{'CREATED_DATE'|translate}}</th>
         <th scope="col" class="px-6 py-3">{{'LAST_LOGIN'|translate}}</th>
-        <th scope="col" class="px-6 py-3">{{'EDIT'|translate}}</th>
+        <th scope="col" class="px-6 py-3">{{'ACTION'|translate}}</th>
       </tr>
     </thead>
 
@@ -75,8 +65,7 @@
         </td>
         <td class="px-6 py-4">{{ user.id }}</td>
         <th scope="row" class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white">
-          <div
-          [routerLink]="['/edit-user', user.id]"
+          <div [routerLink]="['/edit-user', user.id]"
             class="w-10 h-10 rounded-full bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white hover:from-pink-500 hover:to-orange-500 flex items-center justify-center"
             title="{{ user.username }}">
             {{ user.username[0] }}
@@ -99,10 +88,30 @@
             {{ user.lastLogin }}
           </div>
         </td>
-        <td class="px-6 py-4">
-          <a [routerLink]="['/edit-user', user.id]"
-            class="font-medium text-blue-500 dark:text-blue-700 hover:underline">{{'EDIT_USER'|translate}}</a>
+        <!-- action buttons -->
+        <td class="p-4">
+          <button class="mr-4" title="Edit" [routerLink]="['/edit-user', user.id]">
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-5 fill-blue-500 hover:fill-blue-700"
+              viewBox="0 0 348.882 348.882">
+              <path
+                d="m333.988 11.758-.42-.383A43.363 43.363 0 0 0 304.258 0a43.579 43.579 0 0 0-32.104 14.153L116.803 184.231a14.993 14.993 0 0 0-3.154 5.37l-18.267 54.762c-2.112 6.331-1.052 13.333 2.835 18.729 3.918 5.438 10.23 8.685 16.886 8.685h.001c2.879 0 5.693-.592 8.362-1.76l52.89-23.138a14.985 14.985 0 0 0 5.063-3.626L336.771 73.176c16.166-17.697 14.919-45.247-2.783-61.418zM130.381 234.247l10.719-32.134.904-.99 20.316 18.556-.904.99-31.035 13.578zm184.24-181.304L182.553 197.53l-20.316-18.556L294.305 34.386c2.583-2.828 6.118-4.386 9.954-4.386 3.365 0 6.588 1.252 9.082 3.53l.419.383c5.484 5.009 5.87 13.546.861 19.03z"
+                data-original="#000000" />
+              <path
+                d="M303.85 138.388c-8.284 0-15 6.716-15 15v127.347c0 21.034-17.113 38.147-38.147 38.147H68.904c-21.035 0-38.147-17.113-38.147-38.147V100.413c0-21.034 17.113-38.147 38.147-38.147h131.587c8.284 0 15-6.716 15-15s-6.716-15-15-15H68.904C31.327 32.266.757 62.837.757 100.413v180.321c0 37.576 30.571 68.147 68.147 68.147h181.798c37.576 0 68.147-30.571 68.147-68.147V153.388c.001-8.284-6.715-15-14.999-15z"
+                data-original="#000000" />
+            </svg>
+          </button>
+          <button class="mr-4" title="Delete">
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-5 fill-red-500 hover:fill-red-700" viewBox="0 0 24 24">
+              <path
+                d="M19 7a1 1 0 0 0-1 1v11.191A1.92 1.92 0 0 1 15.99 21H8.01A1.92 1.92 0 0 1 6 19.191V8a1 1 0 0 0-2 0v11.191A3.918 3.918 0 0 0 8.01 23h7.98A3.918 3.918 0 0 0 20 19.191V8a1 1 0 0 0-1-1Zm1-3h-4V2a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v2H4a1 1 0 0 0 0 2h16a1 1 0 0 0 0-2ZM10 4V3h4v1Z"
+                data-original="#000000" />
+              <path d="M11 17v-7a1 1 0 0 0-2 0v7a1 1 0 0 0 2 0Zm4 0v-7a1 1 0 0 0-2 0v7a1 1 0 0 0 2 0Z"
+                data-original="#000000" />
+            </svg>
+          </button>
         </td>
+
       </tr>
     </tbody>
   </table>
