--- a/PsychoApp_AdminPanel/src/app/features/users/users.component.html
+++ b/PsychoApp_AdminPanel/src/app/features/users/users.component.html
@@ -101,7 +101,7 @@
                 data-original="#000000" />
             </svg>
           </button>
-          <button class="mr-4" title="Delete">
+          <button class="mr-4" title="Delete" (click)="openDialog(user.id)">
             <svg xmlns="http://www.w3.org/2000/svg" class="w-5 fill-red-500 hover:fill-red-700" viewBox="0 0 24 24">
               <path
                 d="M19 7a1 1 0 0 0-1 1v11.191A1.92 1.92 0 0 1 15.99 21H8.01A1.92 1.92 0 0 1 6 19.191V8a1 1 0 0 0-2 0v11.191A3.918 3.918 0 0 0 8.01 23h7.98A3.918 3.918 0 0 0 20 19.191V8a1 1 0 0 0-1-1Zm1-3h-4V2a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v2H4a1 1 0 0 0 0 2h16a1 1 0 0 0 0-2ZM10 4V3h4v1Z"
@@ -116,3 +116,13 @@
     </tbody>
   </table>
 </div>
+
+<app-delete-dialog
+  [title]="'DELETE_USER'"
+  [message]="'ARE_YOU_SURE_YOU_WANT_TO_DELETE_THIS_USER'"
+  [confirmText]="'DELETE'"
+  [cancelText]="'CANCEL'"
+  [isVisible]="isDialogVisible"
+  (onConfirm)="deleteUser()"
+  (onCancel)="closeDialog()">
+</app-delete-dialog>
