--- a/PsychoApp_AdminPanel/src/app/features/all-notes/all-notes.component.html
+++ b/PsychoApp_AdminPanel/src/app/features/all-notes/all-notes.component.html
@@ -1,1 +1,8 @@
-<p>here you can see all of notes and you cant edit or add or delete anything here cuz it send from application</p>
+<span>notes </span>
+<ul>
+  <li *ngFor="let note of notes">
+    <h3>{{ note.values.content }}</h3>
+
+  </li>
+</ul>
+
